feat: Network utils (manage endianess, get and validate an IP, get local time)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ add_library( ${PROJECT_NAME} STATIC
     ${NET_SRC_DIR}/temp.cpp
     ${NET_SRC_DIR}/NetworkSocket.cpp
     ${NET_SRC_DIR}/Address.cpp
+    ${NET_SRC_DIR}/NetworkUtils.cpp   
 )
 
 target_include_directories(${PROJECT_NAME}
