--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,9 +32,16 @@ add_library( ${PROJECT_NAME} STATIC
     ${NET_SRC_DIR}/NetworkUtils.cpp   
     ${NET_SRC_DIR}/PacketSerializer.cpp
     ${NET_SRC_DIR}/PacketFactory.cpp
+    ${NET_SRC_DIR}/ProtocolManager.cpp
 )
 
 target_include_directories(${PROJECT_NAME}
     PUBLIC
         ${NET_HDR_DIR}
 )
+
+# Link jsoncpp library
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(JSONCPP REQUIRED jsoncpp)
+target_link_libraries(${PROJECT_NAME} ${JSONCPP_LIBRARIES})
+target_include_directories(${PROJECT_NAME} PRIVATE ${JSONCPP_INCLUDE_DIRS})
