--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,8 @@ add_library( ${PROJECT_NAME} STATIC
     ${NET_SRC_DIR}/PacketSerializer.cpp
     ${NET_SRC_DIR}/PacketFactory.cpp
     ${NET_SRC_DIR}/ProtocolManager.cpp
+    ${NET_SRC_DIR}/Server.cpp
+    ${NET_SRC_DIR}/Client.cpp
 )
 
 target_include_directories(${PROJECT_NAME}
@@ -45,3 +47,9 @@ find_package(PkgConfig REQUIRED)
 pkg_check_modules(JSONCPP REQUIRED jsoncpp)
 target_link_libraries(${PROJECT_NAME} ${JSONCPP_LIBRARIES})
 target_include_directories(${PROJECT_NAME} PRIVATE ${JSONCPP_INCLUDE_DIRS})
+
+add_executable(server_main server_main.cpp)
+target_link_libraries(server_main ${PROJECT_NAME})
+
+add_executable(client_main client_main.cpp)
+target_link_libraries(client_main ${PROJECT_NAME})
