--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 project(Network)
 
+include(FetchContent)
+
 ########## SETUP ##########
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
@@ -42,8 +44,18 @@ target_include_directories(${PROJECT_NAME}
         ${NET_HDR_DIR}
 )
 
-# Link jsoncpp library
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(JSONCPP REQUIRED jsoncpp)
-target_link_libraries(${PROJECT_NAME} ${JSONCPP_LIBRARIES})
-target_include_directories(${PROJECT_NAME} PRIVATE ${JSONCPP_INCLUDE_DIRS})
+########## JSONCPP ##########
+set(JSONCPP_WITH_TESTS OFF CACHE BOOL "Disable JsonCpp tests" FORCE)
+set(JSONCPP_WITH_POST_BUILD_UNITTEST OFF CACHE BOOL "Disable JsonCpp post build unittest" FORCE)
+
+FetchContent_Declare(
+    jsoncpp
+    GIT_REPOSITORY https://github.com/open-source-parsers/jsoncpp.git
+    GIT_TAG 1.9.6
+)
+FetchContent_MakeAvailable(jsoncpp)
+
+target_link_libraries(${PROJECT_NAME}
+    PRIVATE
+        jsoncpp_lib
+)
